            NOTE: Please refer to the migration notes!
    * 4155 FIX: Do not perform actions on events if overflow limit is active...
    * 4156 FIX: Fix off-by-one error in EC limit handling...
    * 4199 FIX: Fix detection of replication mode if EC is distributed...
    * 4200 FIX: Fix computation of Event Console performance snapin in distributed mode...


1.4.0i3:
    Core & Setup:
    * 3978 FIX: mkbackup: Fixed backup to some CIFS shares ([Errno 13] Permission denied) '...')...
    * 4078 FIX: Fixed handling of hosts with non resolvable IP addresses during runtime...

    Checks & Agents:
    * 3988 Windows agent: new global option disabled_sections...
    * 3989 Logwatch patterns: now able to change state of context lines...
    * 4087 netgear_fans, netgear_powersupplies, netgear_temp: new checks for Netgear Switches which support the FASTPATH-BOXSERVICES-PRIVATE MIB
    * 4089 oracle_tablespaces: file online states are now configurable if size info is available
    * 4096 avaya_chassis_card, avaya_chassis_ps, avaya_chassis_temp: New checks for Avaya devices...
    * 4094 apc_rackpdu_power: now detects all phases or banks connected to this pdu
            NOTE: Please refer to the migration notes!
    * 3993 Some minor performance improvements during config generation...
    * 4116 mk_oracle.ps1: added Oracle wallet support to Windows plugin...
    * 3995 skype check: updated perfvariable and metric names, making their purpose more clear...
            NOTE: Please refer to the migration notes!
    * 3996 agent_netapp clustermode: now uses a fallback query to determine the node name if the intial query fails
    * 4108 ipmi_sensors: new options available...
    * 4109 websphere_mq_instance, websphere_mq_instance.manager: new checks for Websphere MQ
    * 4110 netscaler_vserver: now lower levels for health are configurable
    * 4098 ups_cps_battery, ups_cps_battery.temp, ups_cps_inphase, ups_cps_outphase: Several checks to monitor CPS UPS devices