@@ -45,6 +45,8 @@
     * 4156 FIX: Fix off-by-one error in EC limit handling...
     * 4199 FIX: Fix detection of replication mode if EC is distributed...
     * 4200 FIX: Fix computation of Event Console performance snapin in distributed mode...
+    * 4219 FIX: Trap processing with community "public" is now only default and not accepted in all cases anymore...
+            NOTE: Please refer to the migration notes!
 
 
 1.4.0i3:
